<resources>
    <string name="app_name">Tour Guide App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email Address</string>
    <string name="create">Create Account</string>
    <string name="cancel">Cancel</string>
    <string name="hello">Hello</string>
    <string name="signup">SignUp</string>
    <string name="no_acc">No account yet? Create an account now</string>
    <string name="title_activity_homepage">Homepage</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
</resources>
